# partydeck

./: .gitignore  Cargo.toml  README.md  build.sh  get_deps_releases.sh
.github/ISSUE_TEMPLATE/: bug_report.md  game-specific-issue.md
.github/workflows/: build.yml  build_arch.yml  build_fedora.yml
appimage/: AppImage.sh
pkg/appimage/: AppImage.sh  partydeck.desktop
res/: GamingModeLauncher.sh  splitscreen_kwin.js  splitscreen_kwin_vertical.js
src/: cli.rs  game.rs  handler.rs  input.rs  instance.rs  launch.rs  main.rs  monitor.rs  paths.rs  profiles.rs  util.rs
src/app/: app.rs  app_light.rs  app_pages.rs  app_panels.rs  auto_launch.rs  config.rs  gui_pages.rs  gui_panels.rs  mod.rs
src/layout_manager/: layout_manager.rs  mod.rs  wayland_client_code.rs
src/util/: filesystem.rs  mod.rs  profiles.rs  sys.rs
