[package]
name = "partydeck"
version = "0.8.5"
edition = "2024"

[dependencies]
dialog = "0.3.0"
eframe = "0.32.1"
egui_extras = { version = "0.32.1", features = ["all_loaders"] }
evdev = "=0.13.0"
fastrand = "2.3.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
walkdir = "2.5.0"
x11rb = "0.13.1"
zbus = "5.5.0"
steamlocate = "2.0.1"
semver = "1.0.26"
sdl2 = "0.38.0"
zip = "5.1.1"
pathsearch = "0.2.0"
